changed image locations

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leno App</title>
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="icon" href="/images/favicon.png">
+    <link rel="icon" href="images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
@@ -111,7 +111,7 @@
 
         </div>
         <div class="hero__images">
-            <img src="/images/header-smartphones.png" alt="Leno app">
+            <img src="images/header-smartphones.png" alt="Leno app">
         </div>
     </div>
 </header>
@@ -123,7 +123,7 @@
     <div class="testimonials__container container">
         <div class="testimonials__card">
             <div class="testimonials__image">
-                <img src="/images/testimonial-1.jpg" alt="">
+                <img src="images/testimonial-1.jpg" alt="">
             </div>
             <div class="testimonials__card--content">
                 <p class="testimonials__card-text">
@@ -137,7 +137,7 @@
 
         <div class="testimonials__card">
             <div class="testimonials__image">
-                <img src="/images/testimonial-2.jpg" alt="">
+                <img src="images/testimonial-2.jpg" alt="">
             </div>
             <div class="testimonials__card--content">
                 <p class="testimonials__card-text">
@@ -151,7 +151,7 @@
 
         <div class="testimonials__card-last">
             <div class="testimonials__image">
-                <img src="/images/testimonial-3.jpg" alt="">
+                <img src="images/testimonial-3.jpg" alt="">
             </div>
             <div class="testimonials__card--content">
                 <p class="testimonials__card-text">
@@ -236,7 +236,7 @@
 
                 <div class="features__grid-column 
                 features__grid-column-center">
-                <img src="/images/features-smartphone-1.png" alt="">
+                <img src="images/features-smartphone-1.png" alt="">
                 </div>
 
                  <!--Grid Column 3-->
