fixed icon issues

--- a/index.html
+++ b/index.html
@@ -317,9 +317,10 @@
             Start using Leno today and set your long term goals
           </h3>
           <p class="details__grid-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-            consequuntur? Sint nostrum temporibus eum laudantium, quaerat
-            voluptates officia modi perspiciatis!
+            Start using Leno today to take control of your future. Our platform is designed to 
+            help you set, track, and achieve your long-term goals with ease.
+             Whether you're planning for personal growth or business success, 
+             Leno provides the tools and insights you need to succeed.
           </p>
           <a href="details.html" class="details__grid-button btn">More</a>
         </div>
@@ -329,9 +330,10 @@
             The calendar feature helps you schedule tasks
           </h3>
           <p class="details__grid-description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-            consequuntur? Sint nostrum temporibus eum laudantium, quaerat
-            voluptates officia modi perspiciatis!
+            Stay organized and on track with our intuitive calendar feature. 
+            Effortlessly schedule tasks, set reminders, 
+            and prioritize your daily activities. With everything in one place,
+             managing your time has never been easier.
           </p>
           <a href="details.html" class="details__grid-button btn">More</a>
         </div>
