fixed image logo issue

--- a/details.html
+++ b/details.html
@@ -24,7 +24,7 @@
     <navbar class="navbar">
       <div class="navbar__container container">
         <div class="navbar__logo">
-          <img src="/images/logo.svg" alt="Leno" />
+          <img src="images/logo.svg" alt="Leno" />
         </div>
         <div class="navbar__menu">
           <ul class="navbar__menu-list">
